# poetry-render-demo

./: pyproject.toml  render.yaml
api/: views.py
api/templates/api/: index.html
simpleCrud/: asgi.py  settings.py  urls.py  wsgi.py
