[tool.poetry]
name = "poetry-render-demo"
version = "0.1.0"
description = ""
authors = ["krish-patel1003 <92010868+krish-patel1003@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_render_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
